avro_derive/tests/ui/avro_rs_398_transparent.stderr
error: AvroSchema: #[serde(transparent)] is only allowed on structs with one unskipped field
  --> tests/ui/avro_rs_398_transparent.rs:21:1
   |
21 | #[serde(transparent)]
   | ^

error: AvroSchema: `#[serde(transparent)]` is only supported on structs
  --> tests/ui/avro_rs_398_transparent.rs:28:1
   |
28 | #[serde(transparent)]
   | ^
